# agentic-ai

./: .env.example  .gitignore  Justfile  README.md  README_MIGRATIONS.md  alembic.ini  architecture.md  docker-compose.yml  litellm.yaml  pyproject.toml  pytest.ini  requirements.txt  vulture_report.txt
agents/ds_team/: datasci-cv.md  datasci-nlp.md  datasci-personalization.md
agents/engineer_team/: engineer-backend.md  engineer-frontend.md  engineer-ml.md  overseer-qasec.md
agents/manager_team/: manager-reporting.md  pm-sixsigma.md  solution-architect.md
alembic/: env.py
alembic/versions/: 0001_pgvector_extension.py  0002_add_events.py
docker/litellm/: Dockerfile  preload_models.py  run.sh  run_litellm.py
docs/: architecture.puml  openapi.yaml
scripts/: clean_agents.py  dev.ps1  sync_agents.py  test_queue.py
src/agentic_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: config.py  costs.py  crud.py  db.py  main.py  memory_manager.py  models.py  schemas.py
src/app/adapters/: base.py  litellm_adapter.py  ollama_adapter.py  openai_adapter.py
src/app/agent/: executor.py  queue.py
src/app/routers/: admin.py  agents.py  embeddings.py  events.py  memories.py  metrics.py  ui.py
src/app/tools/: __init__.py  basic.py  repo.py
src/app/utils/: embeddings.py
tests/: e2e_test.py  test_metrics.py  test_search_null_embedding.py  test_tools_run.py
tests/e2e/: test_health.py
tests/integration/: check_persistence.py
tests/unit/: test_adapters.py  test_executor.py  test_queue_adapter.py
