[project]
name = "agentic-ai"
version = "0.1.0"
description = "Local-first agentic AI platform (Ollama, LiteLLM, OpenAI adapters)"
authors = [ { name = "Agentic Dev", email = "dev@example.com" } ]
dependencies = [
    "fastapi>=0.95.0,<1.0",
    "uvicorn[standard]>=0.18.0,<1.0",
    "asyncpg>=0.27.0",
    "SQLAlchemy>=2.0.0,<2.2",
    "alembic>=1.8.0",
    "pgvector>=0.4.2",
    "pydantic>=2.0",
    "pydantic-settings>=0.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "litellm>=0.3.0",
    "aioredis>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
